# IoT_Fianl_Project

./: .gitignore
frontend/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/api/: runners.ts
frontend/src/components/: RankingList.tsx  RunnerList.tsx  RunnerMap.tsx  Sidebar.tsx
frontend/src/types/: runner.ts
frontend/src/utils/: time.ts
runner/: runner.ino
server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/app/: main.py
server/app/api/routes/: health.py  runners.py
server/app/core/: config.py
server/app/models/: runner.py
server/app/repositories/: runner_repository.py
server/app/services/: mqtt_service.py  runner_service.py
server/scripts/: publish_test_runner.py
server/tests/: test_api.py  test_mqtt_service.py  test_runner_repository.py  test_runner_service.py
